--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,8 @@
 {
-  "C_Cpp.intelliSenseEngineFallback": "enabled",
-  "files.associations": {
-    "*.env.development": "env",
-    "*.env.production": "env",
-    "*.env.local": "env",
-    "*.ex": "elixir",
-    "stdio.h": "c"
+  "clang-format.executable": "C:\\Users\\vineboneto\\AppData\\Roaming\\npm\\node_modules\\clang-format\\bin\\win32\\clang-format",
+  "clang-format.style": "file",
+  "editor.formatOnSave": true,
+  "[cpp]": {
+    "editor.defaultFormatter": "demiaochen.clang-format-indent-4"
   }
 }
